ontol/ontol-compiler/test-cases/error/rel/declare_property_in_foreign_domain.on
use 'foreign' as foreign

def bar (
    rel* 'foo': foreign.foo // This is OK
)

def baz ()

rel foreign.foo 'baz': baz // ERROR definition is sealed and cannot be modified// ERROR must identify a type within the domain

//@ src_name=foreign
def foo ()
